// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
<div
  className="sc-fzozJi brZbRr"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxmLO sc-fzoLsD jhUayj"
  >
    <div>
      <h2
        className="sc-AxheI OiaRP"
      >
        Users
      </h2>
      <div
        className="sc-Axmtr fGKBRD"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
<div
  className="sc-fzozJi brZbRr"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxmLO sc-fzoLsD jhUayj"
  >
    <div>
      <h2
        className="sc-AxheI OiaRP"
      >
        Users
      </h2>
      <div
        className="sc-Axmtr fGKBRD"
      >
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            test
          </p>
          <button
            className="sc-AxjAm sc-AxirZ sc-AxgMl kbcbn"
            onClick={[Function]}
          >
            delete
          </button>
        </div>
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            admin
          </p>
          <p
            className="sc-AxhUy hvjDNC"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
